<resources>
    <string name="app_name">timmyPOS</string>

    <!--TEST STRINGS-->
    <string name="test_item_title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</string>
    <string name="test_item_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="test_item_cost">10.00</string>

    <!--GENERAL-->
    <string name="general_cost_format">$%s</string>
    <string name="general_menu_item_title_format">%s. %s</string>
    <string name="general_extras_string_format">Add %s [$%s]</string>
    <string name="general_sizes_string_format">%s [$%s]</string>


    <!--LOGIN ACTIVITY-->
    <string name="login_welcome_title">Welcome!</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="loging_button_text">Log In</string>

    <!--MAIN ACTIVITY-->
    <string name="main_nav_orders_title">Orders</string>
    <string name="main_nav_financials_title">Financials</string>
    <string name="main_nav_history_title">History</string>

    <!--ORDERS FRAGMENT-->
    <string name="orders_home">Home</string>
    <string name="orders_appetizers">Appetizers</string>
    <string name="orders_soups">Soups</string>
    <string name="orders_pho">Pho</string>
    <string name="orders_rice">Rice</string>
    <string name="orders_fried_rice">Fried Rice</string>
    <string name="orders_vermicelli">Vermicelli</string>
    <string name="orders_stir_fry">Stir-Fry</string>
    <string name="orders_drinks">Drinks</string>
    <string name="orders_add_to_order">ADD TO ORDER</string>
    <string name="orders_view_order">VIEW ORDER</string>
    <string name="orders_item_count">Items: %s</string>
    <string name="orders_cancel_dialog">CANCEL</string>
    <string name="orders_add_dialog">ADD %s TO ORDER</string>
    <string name="orders_subtotal_text">SUB-TOTAL</string>
    <string name="orders_list_price_per_item">$%s ea.</string>
    <string name="orders_dialog_price_per_item">\@ $%s ea.</string>
    <string name="orders_dialog_sizes_title">Size</string>

    <!--SOUPS DIALOG-->
    <string name="size_small">Small</string>
    <string name="size_large_pho">Large [+$1.00]</string>
    <string name="size_xlarge_pho">X-Large [+$4.00]</string>
    <string name="size_large_soups">Large</string>
    <string name="size_xlarge_soups">X-Large [+$4.00]</string>
    <string name="extras_chili_oil">Add Chili Oil [+$1.00]</string>
    <string name="extras_rare_beef">Add Rare Beef [+$3.00]</string>
    <string name="extras_well_done">Add Well Done Beef [+$3.00]</string>
    <string name="extras_tripe">Add Tripe [+$3.00]</string>
    <string name="extras_tendon">Add Tendon [+$3.00]</string>
    <string name="extras_pork">Add Pork [+$3.00]</string>
    <string name="extras_veggies">Add Veggies [+$3.00]</string>
    <string name="extras_tofu">Add Tofu [+$3.00]</string>
    <string name="extras_beef_balls">Add Beef Balls [+$3.00]</string>
    <string name="extras_noodles">Add Noodles [+$3.00]</string>

</resources>
