<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryLight"
    android:minHeight="600dp"
    android:minWidth="750dp"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/food_picture"
            android:layout_width="360dp"
            android:layout_height="360dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_image_24dp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/plus_quantity_shown"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/margin_small"
            android:src="@drawable/ic_add_circle_white_24dp"
            app:layout_constraintTop_toTopOf="@id/quantity_text"
            app:layout_constraintBottom_toBottomOf="@id/quantity_text"
            app:layout_constraintStart_toEndOf="@id/quantity_text"/>

        <ImageView
            android:id="@+id/plus_quantity_hidden"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/margin_small"
            android:visibility="invisible"
            android:src="@drawable/ic_add_circle_grey_24dp"
            app:layout_constraintTop_toTopOf="@id/quantity_text"
            app:layout_constraintBottom_toBottomOf="@id/quantity_text"
            app:layout_constraintStart_toEndOf="@id/quantity_text"/>

        <TextView
            android:id="@+id/quantity_text"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            android:background="@drawable/shape_rounded_rect_white"
            android:text="99"
            app:layout_constraintTop_toBottomOf="@id/food_picture"
            app:layout_constraintStart_toStartOf="@id/food_picture"
            app:layout_constraintEnd_toEndOf="@id/food_picture"
            app:layout_constraintDimensionRatio="1:1"/>

        <ImageView
            android:id="@+id/minus_quantity_shown"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/margin_small"
            android:visibility="invisible"
            android:src="@drawable/ic_remove_circle_white_24dp"
            app:layout_constraintTop_toTopOf="@id/quantity_text"
            app:layout_constraintBottom_toBottomOf="@id/quantity_text"
            app:layout_constraintEnd_toStartOf="@id/quantity_text" />

        <ImageView
            android:id="@+id/minus_quantity_hidden"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/margin_small"
            android:src="@drawable/ic_remove_circle_grey_24dp"
            app:layout_constraintTop_toTopOf="@id/quantity_text"
            app:layout_constraintBottom_toBottomOf="@id/quantity_text"
            app:layout_constraintEnd_toStartOf="@id/quantity_text" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/test_item_description"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:layout_marginTop="@dimen/text_small"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@id/food_picture"
            app:layout_constraintStart_toStartOf="@id/food_picture"
            app:layout_constraintTop_toBottomOf="@id/price_per_item"/>

        <TextView
            android:id="@+id/price_per_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders_dialog_price_per_item"
            android:textSize="@dimen/text_small_medium"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="@dimen/padding_medium"
            app:layout_constraintTop_toBottomOf="@id/quantity_text"
            app:layout_constraintEnd_toEndOf="@id/quantity_text"
            app:layout_constraintStart_toStartOf="@id/quantity_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_dialog_options_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/quantity"
        app:layout_constraintTop_toTopOf="@id/quantity"
        app:layout_constraintBottom_toTopOf="@id/subtotal_text">

        <LinearLayout
            android:id="@+id/dialog_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/sizes_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orders_dialog_sizes_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sizes_body"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sizes_title"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_medium"
            app:layout_constraintStart_toEndOf="@id/dialog_size"
            app:layout_constraintTop_toTopOf="@id/dialog_size">

            <TextView
                android:id="@+id/extras_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Extras"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/extras_body"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/extras_title"/>
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/subtotal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orders_subtotal_text"
        android:textSize="@dimen/text_small_medium"
        android:textColor="@color/white"
        android:layout_marginEnd="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@id/add_dialog_positive_button"
        app:layout_constraintEnd_toStartOf="@id/subtotal_cost" />

    <TextView
        android:id="@+id/subtotal_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_item_cost"
        android:textColor="@color/white"
        android:textSize="@dimen/text_small_medium"
        android:layout_marginEnd="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="@id/subtotal_text"
        app:layout_constraintEnd_toEndOf="@id/add_dialog_positive_button"/>

    <TextView
        android:id="@+id/add_dialog_negative_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orders_cancel_dialog"
        android:textSize="@dimen/text_small_medium"
        android:textColor="@color/blue_order"
        app:layout_constraintBottom_toBottomOf="@id/add_dialog_positive_button"
        app:layout_constraintEnd_toStartOf="@id/add_dialog_positive_button"
        android:padding="@dimen/padding_large"/>

    <TextView
        android:id="@+id/add_dialog_positive_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orders_add_dialog"
        android:textSize="@dimen/text_small_medium"
        android:textColor="@color/blue_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/padding_large"/>

</androidx.constraintlayout.widget.ConstraintLayout>