<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryLight"
    android:minHeight="600dp"
    android:minWidth="900dp"
    android:layout_height="fill_parent">

    <include
        android:id="@+id/soups_image_desc_quantity"
        layout="@layout/image_description_quantity_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/soups_add_dialog_options_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/soups_image_desc_quantity"
        app:layout_constraintTop_toTopOf="@id/soups_image_desc_quantity"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/soups_dialog_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/soups_sizes_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orders_dialog_sizes_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/soups_sizes_body"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/soups_sizes_title"/>


                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/broth_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/soups_dialog_size">

            <TextView
                android:id="@+id/broth_option_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Broth"
                android:textStyle="bold"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/margin_xxsmall"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/broth_option_body"
                android:layout_width="175dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_medium"
            app:layout_constraintStart_toEndOf="@id/soups_dialog_size"
            app:layout_constraintTop_toTopOf="@id/soups_dialog_size">

            <TextView
                android:id="@+id/soups_extras_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Extras"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/soups_extras_body"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/soups_extras_title"/>
        </LinearLayout>

        <TextView
            android:id="@+id/soups_subtotal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders_subtotal_text"
            android:textSize="@dimen/text_small_medium"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/margin_small"
            app:layout_constraintBottom_toTopOf="@id/final_actions"
            app:layout_constraintEnd_toStartOf="@id/soups_subtotal_cost" />

        <TextView
            android:id="@+id/soups_subtotal_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_item_cost"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small_medium"
            android:layout_marginEnd="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="@id/soups_subtotal_text"
            app:layout_constraintEnd_toEndOf="@id/final_actions"/>

        <include
            android:id="@+id/final_actions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            layout="@layout/cancel_add_to_order_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>